Trying to get player running.
